--- a/src/Obisoft.OSS/project.json
+++ b/src/Obisoft.OSS/project.json
@@ -33,7 +33,6 @@
     "System.Net.Sockets": "4.1.0",
     "Newtonsoft.Json": "9.0.1",
     "BundlerMinifier.Core": "2.2.281",
-    "SendGrid.NetCore": "1.0.0-rtm-00002",
     "Microsoft.AspNetCore.WebSockets.Server": "0.1.0",
     "Microsoft.AspNetCore.Server.Kestrel.Https": "1.0.1",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
@@ -41,9 +40,7 @@
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
     "Microsoft.EntityFrameworkCore.SqlServer.Design": "1.0.1",
     "Microsoft.VisualStudio.Web.CodeGeneration.Tools": "1.0.0-preview2-update1",
-    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": "1.0.0-preview2-update1",
-    "Twilio": "5.0.0-rc7",
-    "Pomelo.EntityFrameworkCore.MySql": "1.0.0"
+    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": "1.0.0-preview2-update1"
   },
   "tools": {
     "BundlerMinifier.Core": "2.0.238",
